// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render correct size when size is: heading 1`] = `
<Rating
  heading={true}
  rating={3.5}
  showTextRating={false}
/>
`;

exports[`Rating should render correct size when size is: heading and rating text is shown 1`] = `
<Rating
  heading={true}
  rating={4}
  showTextRating={true}
/>
`;

exports[`Rating should render correct size when size is: substandard 1`] = `
<Rating
  rating={3.5}
  showTextRating={false}
  substandard={true}
/>
`;

exports[`Rating should render correct size when size is: substandard and rating text is shown 1`] = `
<Rating
  rating={4}
  showTextRating={true}
  substandard={true}
/>
`;

exports[`Rating should render correct size when size is: superstandard 1`] = `
<Rating
  rating={3.5}
  showTextRating={false}
  superstandard={true}
/>
`;

exports[`Rating should render correct size when size is: superstandard and rating text is shown 1`] = `
<Rating
  rating={4}
  showTextRating={true}
  superstandard={true}
/>
`;

exports[`Rating should render correct star rating when rating is: 0 1`] = `
<Rating
  rating={0}
  showTextRating={false}
/>
`;

exports[`Rating should render correct star rating when rating is: 2.74 1`] = `
<Rating
  rating={2.74}
  showTextRating={false}
/>
`;

exports[`Rating should render correct star rating when rating is: 2.75 1`] = `
<Rating
  rating={2.75}
  showTextRating={false}
/>
`;

exports[`Rating should render correct star rating when rating is: 3.74 1`] = `
<Rating
  rating={3.74}
  showTextRating={false}
/>
`;

exports[`Rating should render correct star rating when rating is: 3.75 1`] = `
<Rating
  rating={3.75}
  showTextRating={false}
/>
`;

exports[`Rating should render correct star rating when rating is: 5 1`] = `
<Rating
  rating={5}
  showTextRating={false}
/>
`;

exports[`Rating should render with className 1`] = `
<Rating
  className="root-class-name"
  rating={5}
  showTextRating={false}
/>
`;

exports[`Rating should render with starClassName 1`] = `
<Rating
  rating={5}
  showTextRating={false}
  starClassName="star-class-name"
/>
`;
